# nnc

./: CMakeLists.txt  Makefile  README.md  project.yml
example/xor/: xor.c
include/: json.h  layer.h  layers.h  loss.h  losses.h  net.h  nn_layer.h  nn_layers.h  nn_loss.h  nn_losses.h  nn_net.h  nn_trainer.h  random.h  trainer.h  util.h
include/layer/: fc_layer.h  sigmoid_layer.h  softmax_layer.h
include/loss/: bce_loss.h  ce_loss.h
sample/: CMakeLists.txt  mnist.c  xor.c
sample/script/: download_mnist.sh
src/: CMakeLists.txt  json.c  layer.c  net.c  nn_layer.c  nn_loss.c  nn_net.c  nn_trainer.c  random.c  trainer.c  util.c
src/layer/: fc_layer.c  sigmoid_layer.c  softmax_layer.c
src/loss/: bce_loss.c  ce_loss.c
test/cases/: test_activation.c  test_json.c  test_layer.c  test_loss.c  test_net.c  test_net.json  test_nn_layer.c  test_nn_loss.c  test_nn_net.c  test_nn_trainer.c  test_trainer.c  test_util.c  test_utils.h
test/cases/layer/: test_fc_layer.c  test_sigmoid_layer.c  test_softmax_layer.c
test/cases/loss/: test_bce_loss.c  test_ce_loss.c
